vlib/v/checker/tests/function_cast_outside_unsafe_err.vv
type FnA = fn()
type FnB = fn(int)

fn main(){
	f := fn(){}
	println(FnB(f))  // not FnA()
}
